Correct alignment for header

--- a/resources/static/brunch/src/app/styles/main.styl
+++ b/resources/static/brunch/src/app/styles/main.styl
@@ -30,6 +30,7 @@
   color rgb(146, 21, 37)
 
 #header
-  font-size 23px
+  font-size 29px
+
+#header img
   vertical-align middle
-  float left
